fix: line spacing / padding in gallery page

--- a/assets/css/gallery.scss
+++ b/assets/css/gallery.scss
@@ -503,7 +503,7 @@
 
 /* Gallery Filter Controls */
 .gallery-filter-controls {
-  margin: 2em 0;
+  margin: 0.8em 0;
   
   .filter-tags {
     display: flex;
@@ -516,12 +516,12 @@
 .tag-pill {
   display: inline-block;
   cursor: pointer;
-  padding: 0.5em 1em;
+  padding: 0.3em 0.6em;
   background: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
-  font-size: 0.875em;
+  font-size: 0.75em;
   font-weight: 500;
   text-transform: capitalize;
   
@@ -987,8 +987,8 @@
   }
   
   .tag-pill {
-    font-size: 0.8em;
-    padding: 0.4em 0.8em;
+    font-size: 0.7em;
+    padding: 0.25em 0.5em;
   }
   
   .gallery-month-photos {
